<resources>
    <string name="app_name">Mobile-test</string>
    <string name="action_settings">Settings</string>
    <string name="resources">Resources</string>
    <string name="categories">Categories</string>
    <string name="details">Details</string>
    <string name="photo_description">photo of resource</string>
    <string name="contact_info">Contact Information</string>
    <string name="address">Address</string>
    <string name="notes">Notes</string>
    <string name="social_media">Social Media</string>
    <string name="biz_hours">Business Hours</string>
    <string name="location_icon">location icon</string>
    <string name="website">Website</string>
    <string name="email">Email</string>
    <string name="phone_number">phone number</string>
    <string name="fax">Fax number</string>
    <string name="toll_free_number">toll-free number</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sort">sort</string>
</resources>
